Updated filenames passed to track_file_for_update.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -217,7 +217,9 @@ exec scripts/maps.csl
 if $auto_update [
     exec scripts/auto-update.csl
     track_file_for_update $SERVER_FILENAME
-    track_file_for_update server.conf
+    track_file_for_update conf/server.conf
+    track_file_for_update conf/vars.conf
+    track_file_for_update scripts/maps.csl
 ]
 
 if $record_player_stats [exec scripts/stats/stats.csl]
