--- a/conf/server.conf
+++ b/conf/server.conf
@@ -232,5 +232,7 @@ defaultgame = [
 
 defaultgame
 
+if $ircbot_enabled [system [bin/irc.pl 1>>logs/irc.log 2>>logs/irc.log &]]
+
 log_status "*** Running HopMod v3 (for Sauerbraten X edition) ***"
 log [server started @(datetime (now))]
