--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -27,3 +27,5 @@ disallow_talk_reason = ""
 
 record_player_stats = 0 //DO NOT ENABLE
 auto_update = 1
+
+ircbot_enabled = 1 //bot settings in irc.conf
