Changed server pipe path for new bot location

--- a/conf/irc.conf
+++ b/conf/irc.conf
@@ -5,7 +5,7 @@ channel #qs-server
 botcommandname server
 botname {server}
 ircport 6667
-#serverpipe /home/cchristopher/hop6/hopmod/serverexec
+serverpipe serverexec
 username iluvsauer
 spamlines 4
 
