Changed path for command log

--- a/conf/irc.conf
+++ b/conf/irc.conf
@@ -8,10 +8,5 @@ ircport 6667
 serverpipe serverexec
 username iluvsauer
 spamlines 4
-
-
-#These are figured out automatically. Unpound them if you want to override.
-#logfile /home/cchristopher/hop6/hopmod/log/irc.log
-#irccommandlog /home/cchristopher/hop6/hopmod/ext/log/irccommand.log
-
+irccommandlog log/irccommand.log
 logfile logs/server.log
