Fixed typo in commandlog entry.

--- a/conf/irc.conf
+++ b/conf/irc.conf
@@ -2,11 +2,11 @@
 
 network irc.us.gamesurge.net
 channel #qs-server
-botcommandname server
-botname {server}
+botcommandname qs2 
+botname {QS2}
 ircport 6667
 serverpipe serverexec
 username iluvsauer
 spamlines 4
-irccommandlog log/irccommand.log
+irccommandlog logs/irccommand.log
 logfile logs/server.log
