Added daemon function and kill function to server runtime.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -208,7 +208,14 @@ event_handler $ondeath [
 ]
 
 event_handler $onshutdown [
+    
     log [server shutdown @(datetime (now))]
+    
+    if $ircbot_enabled [
+        log "shutting down irc bot"
+        kill $ircbot_pid
+    ]
+    
     msg (err "Server is shutting down!")
 ]
 
@@ -232,7 +239,9 @@ defaultgame = [
 
 defaultgame
 
-if $ircbot_enabled [system [bin/irc.pl 1>>logs/irc.log 2>>logs/irc.log &]]
+if $ircbot_enabled [
+    ircbot_pid = (daemon bin/irc.pl [] logs/irc.log logs/irc.log)
+]
 
 log_status "*** Running HopMod v3 (for Sauerbraten X edition) ***"
 log [server started @(datetime (now))]
