Added server_sleep function to server runtime.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -212,7 +212,8 @@ event_handler $onshutdown [
     log [server shutdown @(datetime (now))]
     
     if $ircbot_enabled [
-        log "shutting down irc bot"
+        log "Terminating irc bot"
+        server_sleep 2000 //give the ircbot time to read and broadcast the server log
         kill $ircbot_pid
     ]
     
