Moved ircbot configuration directives from irc.conf to vars.conf. Moved cubescript server side.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -4,6 +4,7 @@
 //   overwritten on server shutdown.
 // * Updates require a server restart for changes to take effect.
 
+exec "conf/irc.csl"
 exec "conf/common.csl"
 exec "conf/vars.conf"
 
