--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -28,4 +28,16 @@ disallow_talk_reason = ""
 record_player_stats = 0 //DO NOT ENABLE
 auto_update = 1
 
+
+//IRC Bot Configuration
 ircbot_enabled = 0 //bot settings in irc.conf
+network = irc.us.gamesurge.net
+channel = #qs-server
+botcommandname = qs2
+botname = {QS2}
+ircport = 6667
+serverpipe = serverexec
+username = iluvsauer
+spamlines = 4
+irccommandlog = logs/irccommand.log
+logfile = logs/server.log
