Fixed name clash with irc / server directives.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -30,14 +30,16 @@ auto_update = 1
 
 
 //IRC Bot Configuration
-ircbot_enabled = 0 //bot settings in irc.conf
-network = irc.us.gamesurge.net
-channel = #qs-server
-botcommandname = qs2
-botname = {QS2}
-ircport = 6667
-serverpipe = serverexec
-username = iluvsauer
-spamlines = 4
-irccommandlog = logs/irccommand.log
-logfile = logs/server.log
+
+irc_enabled = 0 //bot settings in irc.conf
+
+irc_network = irc.us.gamesurge.net
+irc_channel = #qs-server
+irc_botcommandname = qs2
+irc_botname = {QS2}
+irc_port = 6667
+irc_serverpipe = serverexec
+irc_username = iluvsauer
+irc_spamlines = 4
+irc_commandlog = logs/irccommand.log
+irc_serverlogfile = logs/server.log
