Updated irc vars in server.conf

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -212,10 +212,10 @@ event_handler $onshutdown [
     
     log [server shutdown @(datetime (now))]
     
-    if $ircbot_enabled [
+    if $irc_enabled [
         log "Terminating irc bot"
         server_sleep 2000 //give the ircbot time to read and broadcast the server log
-        kill $ircbot_pid
+        kill $irc_pid
     ]
     
     msg (err "Server is shutting down!")
@@ -241,8 +241,8 @@ defaultgame = [
 
 defaultgame
 
-if $ircbot_enabled [
-    ircbot_pid = (daemon bin/irc.pl [] logs/irc.log logs/irc.log)
+if $irc_enabled [
+    irc_pid = (daemon bin/irc.pl [] logs/irc.log logs/irc.log)
 ]
 
 log_status "*** Running HopMod v3 (for Sauerbraten X edition) ***"
