--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -31,7 +31,7 @@ auto_update = 1
 
 //IRC Bot Configuration
 
-irc_enabled = 0 //bot settings in irc.conf
+irc_enabled = 0
 
 irc_network = irc.us.gamesurge.net
 irc_channel = #qs-server
