Moved default flood_protection values to server.conf.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -245,5 +245,10 @@ if $irc_enabled [
     irc_pid = (daemon bin/irc.pl [] logs/irc.log logs/irc.log)
 ]
 
+flood_protection SV_TEXT 1000
+flood_protection SV_SETMASTER 10000
+flood_protection SV_KICK 30000
+flood_protection SV_MAPVOTE 5000
+
 log_status "*** Running HopMod v3 (for Sauerbraten X edition) ***"
 log [server started @(datetime (now))]
