Removed #stats command. Fixed unknown_symbol error in onreteam handler.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -60,7 +60,7 @@ event_handler $onreteam [
     reference oldteam arg2
     reference newteam arg3
     
-    log (format "%1(%2) changed team to %3" (player_name $cn) $cn $newname)
+    log (format "%1(%2) changed team to %3" (player_name $cn) $cn $newteam)
 ]
 
 event_handler $onchmm [
