--- a/src/fpsgame/hopmod/libcubescript/tests/Makefile
+++ b/src/fpsgame/hopmod/libcubescript/tests/Makefile
@@ -66,22 +66,22 @@ DIST_SOURCES = $(utests_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/projects/libcubescript/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/sauerbraten/hopmod/trunk/src/fpsgame/hopmod/libcubescript/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/projects/libcubescript/missing --run tar
-AUTOCONF = ${SHELL} /home/projects/libcubescript/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/projects/libcubescript/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/projects/libcubescript/missing --run automake-1.9
+AMTAR = ${SHELL} /home/sauerbraten/hopmod/trunk/src/fpsgame/hopmod/libcubescript/missing --run tar
+AUTOCONF = ${SHELL} /home/sauerbraten/hopmod/trunk/src/fpsgame/hopmod/libcubescript/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/sauerbraten/hopmod/trunk/src/fpsgame/hopmod/libcubescript/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/sauerbraten/hopmod/trunk/src/fpsgame/hopmod/libcubescript/missing --run automake-1.9
 AWK = gawk
 BUILD_DOCS_FALSE = 
 BUILD_DOCS_TRUE = #
-BUILD_TESTS_FALSE = #
-BUILD_TESTS_TRUE = 
+BUILD_TESTS_FALSE = 
+BUILD_TESTS_TRUE = #
 CPPFLAGS = 
-CPPUNIT_CFLAGS = -I/usr/local/include
-CPPUNIT_CONFIG = /usr/local/bin/cppunit-config
-CPPUNIT_LIBS = -L/usr/local/lib -lcppunit -ldl
+CPPUNIT_CFLAGS = 
+CPPUNIT_CONFIG = 
+CPPUNIT_LIBS = 
 CXX = g++
 CXXDEPMODE = depmode=gcc3
 CXXFLAGS = -g -O2
@@ -103,7 +103,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/projects/libcubescript/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/sauerbraten/hopmod/trunk/src/fpsgame/hopmod/libcubescript/missing --run makeinfo
 OBJEXT = o
 PACKAGE = libcubescript
 PACKAGE_BUGREPORT = 
@@ -136,7 +136,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = /home/projects/libcubescript/install-sh
+install_sh = /home/sauerbraten/hopmod/trunk/src/fpsgame/hopmod/libcubescript/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
