--- a/conf/server.conf
+++ b/conf/server.conf
@@ -2,7 +2,6 @@
 // * Deleting this file will effectively remove the mod and revert the server back to being another vanilla server.
 // * It's safe to modify this file while the server is running, it will not be
 //   overwritten on server shutdown.
-// * Updates require a server restart for changes to take effect.
 
 exec "conf/irc.csl"
 exec "conf/common.csl"
@@ -10,6 +9,7 @@ exec "conf/vars.conf"
 
 logfile "logs/server.log" log
 script_pipe "bin/mkfifochan" "serverexec 777" []
+
 load geoip
 
 event_handler $onconnect [
@@ -228,7 +228,7 @@ if $auto_update [
     track_file_for_update $SERVER_FILENAME
     track_file_for_update conf/server.conf
     track_file_for_update conf/vars.conf
-    track_file_for_update scripts/maps.csl
+    track_file_for_update conf/maps.conf
 ]
 
 if $record_player_stats [exec scripts/stats/stats.csl]
