Moved script files in conf/ to scripts/

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -3,8 +3,8 @@
 // * It's safe to modify this file while the server is running, it will not be
 //   overwritten on server shutdown.
 
-exec "conf/irc.csl"
-exec "conf/common.csl"
+exec "scripts/irc.csl"
+exec "scripts/common.csl"
 exec "conf/vars.conf"
 
 logfile "logs/server.log" log
