Added currentmaster variable.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -155,8 +155,10 @@ event_handler $onsetmaster [
     
     if (strcmp (player_priv $cn) "none") [
         log (format "%1(%2) relinquished privileged status." (player_name $cn) $cn)
+        currentmaster = -1
     ] [
         log (format "%1(%2) claimed %3" (player_name $cn) $cn (player_priv $cn))
+        currentmaster = $cn
     ]
 ]
 
@@ -249,6 +251,8 @@ flood_protection SV_TEXT 1000
 flood_protection SV_SETMASTER 10000
 flood_protection SV_KICK 30000
 flood_protection SV_MAPVOTE 5000
+
+currentmaster = -1
 
 log_status "*** Running HopMod v3 (for Sauerbraten X edition) ***"
 log [server started @(datetime (now))]
