Replaced module loader. Progressed the sqlite3 module.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -10,7 +10,9 @@ exec "conf/vars.conf"
 logfile "logs/server.log" log
 script_pipe "bin/mkfifochan" "serverexec 777" []
 
-load geoip
+load paths "./lib"
+load module geoip
+load module sqlite3
 
 event_handler $onconnect [
     reference cn arg1
