Code for empty server condition in the ondisconnect handler is now delayed using sleep to run after all other ondisconnect handlers.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -43,8 +43,10 @@ event_handler $ondisconnect [
     log (format "%1(%2) %3, connection time: %4" (player_name $cn) $cn $discmsg (duration (player_contime $cn)))
     
     if (= $playercount 0) [
-        if $auto_update server_update
-        defaultgame
+        sleep 1 [ //execute after ondisconnect handlers
+            if $auto_update server_update
+            sleep 1 defaultgame 
+        ]
     ]
 ]
 
