Added grahams game timer and event handler.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -13,6 +13,11 @@ script_pipe "bin/mkfifochan" "serverexec 777" []
 load paths "./lib"
 load module geoip
 
+event_handler $ontimeupdate [
+  reference mins arg1
+  timeleft = $mins
+]
+
 event_handler $onconnect [
     reference cn arg1
     
