Added variables to control mastermask.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -140,8 +140,10 @@ event_handler $onmapchange [
             mastermode @mastermode
             cancel_handler
         ]
-        mastermode $MM_LOCKED
-        console script [Server is locked for coopedit mode.]
+        if $allow_mm_locked [
+            mastermode $MM_LOCKED
+            console script [Server is locked for coopedit mode.]
+        ] [msg (info "Warning! This server doesn't allow locked mastermode.")]
     ]
 ]
 
