--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -22,10 +22,11 @@ default_gametime = (mins 10)
 
 mapvoting_enabled = 1
 
+//TODO move these two obscure variables to server.conf
 allow_talk = 1
 disallow_talk_reason = ""
 
-record_player_stats = 1 //DO NOT ENABLE
+record_player_stats = 0
 auto_update = 1
 
 //IRC Bot Configuration
