Moved some vars from vars.conf to server.conf. Made more progress with stats code.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -252,12 +252,16 @@ if $irc_enabled [
     irc_pid = (daemon bin/irc.pl [] logs/irc.log logs/irc.log)
 ]
 
+
+//Variables that are too obscure or technical to be located in vars.conf
 flood_protection SV_TEXT 1000
 flood_protection SV_SETMASTER 10000
 flood_protection SV_KICK 30000
 flood_protection SV_MAPVOTE 5000
 
 currentmaster = -1
+allow_talk = 1
+disallow_talk_reason = ""
 
 log_status "*** Running HopMod v3 (for Sauerbraten X edition) ***"
 log [server started @(datetime (now))]
