Allow admin to cast map vote when voting is disabled.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -114,7 +114,9 @@ event_handler $onmapvote [
     reference mode arg2
     reference map arg3
     
-    if $mapvoting_enabled [
+    local admin (strcmp (player_priv $cn) "admin")
+    
+    if (|| $admin $mapvoting_enabled) [
         log (format "%1(%2) suggests %3 on map %4" (player_name $cn) $cn $mode $map)
     ] [
         privmsg $cn (err "Map voting is disabled.")
