Added log timestamp variable.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -7,7 +7,13 @@ exec "scripts/irc.csl"
 exec "scripts/common.csl"
 exec "conf/vars.conf"
 
-logfile "logs/server.log" log
+logfile "logs/server.log" server_log
+
+log = [
+    reference text arg1
+    if $log_timestamp [server_log (format "[%1] %2" (time (now)) $text)] [server_log $text]
+]
+
 script_pipe "bin/mkfifochan" "serverexec 777" []
 
 load paths "./lib"
