Many changes! Most of the stats code is written. Added gameplay event types. Added new functions. Small fixes.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -45,8 +45,9 @@ event_handler $ondisconnect [
     
     discmsg = "disconnected"
     if (! (= $reason 0)) [discmsg = (format "disconnected (%1)" (disc_reason $reason))]
-    
     log (format "%1(%2) %3, connection time: %4" (player_name $cn) $cn $discmsg (duration (player_contime $cn)))
+    
+    if (= $reason $DISC_KICK) [player_var $cn kicked 1]
     
     if (= $playercount 0) [
         sleep 1 [ //execute after ondisconnect handlers
@@ -113,6 +114,11 @@ event_handler $ontext [
         filename = (format "./scripts/commands/%1.csl" $cmdname)
         if (path? $filename) [exec $filename] [privmsg $cn (err "Command not found.")]
     ]
+]
+
+event_handler $onsayteam [
+    parameters cn text
+    log (format "%1(%2)(team): %3" (player_name $cn) $cn $text)
 ]
 
 event_handler $onmapvote [
