--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -21,11 +21,12 @@ default_map = complex
 default_gametime = (mins 10)
 
 mapvoting_enabled = 1
+auto_update = 1
+log_timestamp = 0
+
+// Stats Configuration
 
 record_player_stats = 0
-auto_update = 1
-
-log_timestamp = 0
 
 //IRC Bot Configuration
 
