sauer cvs update

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -277,5 +277,5 @@ currentmaster = -1
 allow_talk = 1
 disallow_talk_reason = ""
 
-log_status "*** Running HopMod v3 (for Sauerbraten X edition) ***"
+log_status "*** Running HopMod v3 (for Sauerbraten CTF Edition) ***"
 log [server started @(datetime (now))]
