--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -1,5 +1,5 @@
 
-title "change me now"
+title "House of Pain"
 maxclients 8
 password "changemenow"
 
@@ -26,7 +26,7 @@ log_timestamp = 0
 
 // Stats Configuration
 
-record_player_stats = 0
+record_player_stats = 1
 
 //IRC Bot Configuration
 
