Added motd display to onconnect.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -35,6 +35,7 @@ event_handler $onconnect [
         local connection_id @(player_conid $cn)
         if (!= $connection_id (player_conid $cn)) [return]
         privmsg $cn (orange [@title server])
+	privmsg $cn $motd
     ]
     
 ]
