--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -2,6 +2,7 @@
 title "changemenow"
 maxclients 8
 password "changemenow"
+motd = "Welcome to the changemenow server"
 
 custom_maprotation_enabled = 1
 custom_maprotation_balance = 0
