Added granular debugging and the option to turn it on or off in the conf file.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -32,7 +32,7 @@ record_player_stats = 0
 //IRC Bot Configuration
 
 irc_enabled = 0
-
+irc_debug = 0
 irc_network = irc.us.gamesurge.net
 irc_channel = #qs-server
 irc_botcommandname = qs2
