Added Translation module which allows language translation (experimental)

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -45,3 +45,6 @@ irc_username = iluvsauer
 irc_spamlines = 4
 irc_commandlog = logs/irccommand.log
 irc_serverlogfile = logs/server.log
+
+// Optional Modules - May require additional module installation.
+irc_trmodule = 0 // Translation Module for sending translated text. Requires REST::Google::Translate
