Fixed bug in module load

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -37,14 +37,16 @@ irc_adminpw = changemenow
 irc_debug = 0
 irc_network = irc.us.gamesurge.net
 irc_channel = #qs-server
-irc_botcommandname = qs2
-irc_botname = {QS2}
+irc_botcommandname = changeme 
+irc_botname = {changeme}
 irc_port = 6667
 irc_serverpipe = serverexec
-irc_username = iluvsauer
+irc_username = changeme 
 irc_spamlines = 4
 irc_commandlog = logs/irccommand.log
 irc_serverlogfile = logs/server.log
 
 // Optional Modules - May require additional module installation.
-irc_trmodule = 0 // Translation Module for sending translated text. Requires REST::Google::Translate
+
+// Translation Module for sending translated text. Requires REST::Google::Translate
+irc_trmodule = 0
