Added another method to adding player commands.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -108,7 +108,11 @@ event_handler $ontext [
         arguments = (split $text " ")
         cmdname = (at (split (at $arguments 0) #) 0)
         filename = (format "./scripts/commands/%1.csl" $cmdname)
-        if (path? $filename) [exec $filename] [privmsg $cn (err "Command not found.")]
+        if (path? $filename) [exec $filename] [
+            if (symbol? (concatword playercmd_ $cmdname)) [
+                (concatword playercmd_ $cmdname)
+            ] [privmsg $cn (err "Command not found.")]
+        ]
     ]
 ]
 
@@ -273,7 +277,7 @@ currentmaster = -1
 allow_talk = 1
 disallow_talk_reason = ""
 
-log_status "*** Running HopMod v3 (for Sauerbraten CTF Edition) ***"
+log_status "*** Running HopMod v3 for Sauerbraten CTF Edition ***"
 log [server started @(datetime (now))]
 
 script_pipe "bin/mkfifochan" "serverexec 777" []
