Passed on argument list to dynamic player command function.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -109,8 +109,13 @@ event_handler $ontext [
         cmdname = (at (split (at $arguments 0) #) 0)
         filename = (format "./scripts/commands/%1.csl" $cmdname)
         if (path? $filename) [exec $filename] [
-            if (symbol? (concatword playercmd_ $cmdname)) [
-                (concatword playercmd_ $cmdname)
+            dynamic_command = (concatword playercmd_ $cmdname)
+            if (symbol? $dynamic_command) [
+                arguments = (erase1st $arguments)
+                try do [@dynamic_command @arguments] [
+                    log_status [@dynamic_command function failed with error @arg1]
+                    privmsg $cn (err "Command failed. Check your arguments.")
+                ]
             ] [privmsg $cn (err "Command not found.")]
         ]
     ]
@@ -263,9 +268,8 @@ defaultgame = [
 defaultgame
 
 if $irc_enabled [
-    irc_pid = (daemon bin/irc.pl [] logs/irc.log logs/irc.log)
+    daemon bin/irc.pl [] logs/irc.log logs/irc.log
 ]
-
 
 //Variables that are too obscure or technical to be located in vars.conf
 flood_protection SV_TEXT 1000
