Added #eval command.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -288,3 +288,9 @@ script_pipe "bin/mkfifochan" "serverexec 777" []
 
 load paths "./lib"
 load module geoip
+
+//A player command that allows admin players to execute cubescript code on the server in-game.
+//Syntax is "#eval [insert your code here]", with the square brackets included.
+playercmd_eval = [
+    if (strcmp (player_priv $cn) "admin") [do [@arg1]] [privmsg $cn (err "Permission Denied")]
+]
