Fixed banner bug

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -16,7 +16,7 @@ log = [
 
 event_handler $onconnect [
     reference cn arg1
-    
+
     log (format "%1(%2)(%3) connected" (player_name $cn) $cn (player_ip $cn))
     
     if (&& (! (strcmp (player_name $cn) "unnamed")) (symbol? country)) [
@@ -28,11 +28,11 @@ event_handler $onconnect [
     sleep 2000 [
         local cn @cn
         local connection_id @(player_conid $cn)
-        if (!= $connection_id (player_conid $cn)) [return]
-        privmsg $cn (orange [@title server])
-	privmsg $cn $motd
+        if (= $connection_id (try player_conid $cn [-1])) [
+            privmsg $cn (orange [@title server])
+            privmsg $cn $motd
+        ]
     ]
-    
 ]
 
 event_handler $ondisconnect [
