Improved spy function.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -8,7 +8,6 @@ exec "scripts/common.csl"
 exec "conf/vars.conf"
 
 logfile "logs/server.log" server_log
-
 log = [
     reference text arg1
     if $log_timestamp [server_log (format "[%1] %2" (time (now)) $text)] [server_log $text]
@@ -101,6 +100,11 @@ event_handler $ontext [
     if (player_var $cn mute) [
         privmsg $cn (err "Your voice privilege has been revoked.")
         veto 1
+    ]
+    
+    if (strcmp (player_status $cn) "spying") [
+        veto 1
+        console (player_name $cn) $text
     ]
     
     if (match "^#.*$" $text) [
