Improved spy function.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -102,10 +102,7 @@ event_handler $ontext [
         veto 1
     ]
     
-    if (strcmp (player_status $cn) "spying") [
-        veto 1
-        console (player_name $cn) $text
-    ]
+    local cmd 0
     
     if (match "^#.*$" $text) [
         veto 1
@@ -122,6 +119,12 @@ event_handler $ontext [
                 ]
             ] [privmsg $cn (err "Command not found.")]
         ]
+        cmd = 1
+    ]
+    
+    if (&& (! $cmd) (strcmp (player_status $cn) "spying")) [
+        veto 1
+        console (player_name $cn) $text
     ]
 ]
 
