Changed some log messages.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -246,8 +246,9 @@ event_handler $onshutdown [
     log [server shutdown @(datetime (now))]
     
     if $irc_enabled [
-        log "Terminating irc bot"
-        server_sleep 2000 //give the ircbot time to read and broadcast the server log
+        log "Terminating the IRC bot"
+        log_status "Waiting 2 seconds for the IRC bot to update..."
+        server_sleep 2000 //give the ircbot time to read and broadcast the latest log messages
         kill $irc_pid
     ]
     
@@ -267,6 +268,8 @@ if $auto_update [
 if $record_player_stats [exec scripts/stats/stats.csl]
 
 defaultgame = [
+    //TODO refactoring: extract cleanup code
+    
     mastermode $MM_OPEN
     changemap $default_mode $default_map
     gametime $default_gametime
@@ -288,7 +291,7 @@ currentmaster = -1
 allow_talk = 1
 disallow_talk_reason = ""
 
-log_status "*** Running HopMod v3 for Sauerbraten CTF Edition ***"
+log_status "*** Running Hopmod 3.0 (dev) for Sauerbraten CTF Edition ***"
 log [server started @(datetime (now))]
 
 script_pipe "bin/mkfifochan" "serverexec 777" []
@@ -297,7 +300,7 @@ load paths "./lib"
 load module geoip
 
 //A player command that allows admin players to execute cubescript code on the server in-game.
-//Syntax is "#eval [insert your code here]", with the square brackets included.
+//Syntax is "#eval [<code>]", with the square brackets included and <code> being your code.
 playercmd_eval = [
     if (strcmp (player_priv $cn) "admin") [do [@arg1]] [privmsg $cn (err "Permission Denied")]
 ]
