Renamed an event ID (part 2).

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -153,7 +153,7 @@ event_handler $onsetmap [
     if $custom_gametime_enabled [gametime $custom_gametime]
 ]
 
-event_handler $onmapchange [
+event_handler $onmapchanged [
 
     if (> $playercount 0) [
         log (format "new game: %1" (gameinfo))
