--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -4,6 +4,8 @@ maxclients 8
 password "changemenow"
 motd = "Welcome to the changemenow server"
 
+use_auth 1
+
 custom_maprotation_enabled = 1
 custom_maprotation_balance = 0
 
