Added onauth event handling.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -202,6 +202,13 @@ event_handler $onapprovemaster [
     log (format "%1(%2) approved for master by %3" (player_name $master) $master $approver_name)
 ]
 
+event_handler $onauth [
+    parameters cn success
+    if $success [
+        log (format "%1(%2) passed authentication." (player_name $cn) $cn)
+    ] [log (format "%1(%2) failed authentication." (player_name $cn) $cn)]
+]
+
 event_handler $onspectator [
     reference cn arg1
     reference spec arg2
