Added auth name parameter to onauth event.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -195,10 +195,10 @@ event_handler $onsetmaster [
 ]
 
 event_handler $onauth [
-    parameters cn success
+    parameters cn success authname
     if $success [
-        log (format "%1(%2) passed authentication." (player_name $cn) $cn)
-    ] [log (format "%1(%2) failed authentication." (player_name $cn) $cn)]
+        log (format "%1(%2) passed authentication as '%3'." (player_name $cn) $cn $authname)
+    ] [log (format "%1(%2) failed authentication as '%3'." (player_name $cn) $cn $authname)]
 ]
 
 event_handler $onspectator [
