Added serverctl script.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -303,3 +303,13 @@ load module geoip
 playercmd_eval = [
     if (strcmp (player_priv $cn) "admin") [do [@arg1]] [privmsg $cn (err "Permission Denied")]
 ]
+
+printsvinfo = [
+    parameters filename
+    local output [  Server Title: @title
+  Max Players: @maxclients
+  Running auto-update: @(yesno $auto_update)
+  Running IRC bot: @(yesno $irc_enabled)
+  Running stats database: @(yesno $record_player_stats)]
+    system [echo "@output" >> @filename]
+]
