Delete serverexec file if found, before running script pipe function.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -293,6 +293,10 @@ disallow_talk_reason = ""
 log_status "*** Running Hopmod 3.0 (dev) for Sauerbraten CTF Edition ***"
 log [server started @(datetime (now))]
 
+if (path? serverexec) [
+    log_error "serverexec file already exists! Attempting to delete the file..."
+    system "rm -f serverexec";
+]
 script_pipe "bin/mkfifochan" "serverexec 777" []
 
 load paths "./lib"
