Moved script pipe creation code to its own file. check_scriptpipe function is called from the server's onmapchanged event handler.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -3,6 +3,7 @@
 // * It's safe to modify this file while the server is running, it will not be
 //   overwritten on server shutdown.
 
+exec "scripts/scriptpipe.csl"
 exec "scripts/irc.csl"
 exec "scripts/common.csl"
 exec "conf/vars.conf"
@@ -172,6 +173,8 @@ event_handler $onmapchanged [
             console script [Server is locked for coopedit mode.]
         ] [msg (info "Warning! This server doesn't allow locked mastermode.")]
     ]
+    
+    if (> $gamecount 1) check_scriptpipe
 ]
 
 event_handler $onnewmap [
@@ -293,11 +296,7 @@ disallow_talk_reason = ""
 log_status "*** Running Hopmod 3.0 (dev) for Sauerbraten CTF Edition ***"
 log [server started @(datetime (now))]
 
-if (path? serverexec) [
-    log_error "serverexec file already exists! Attempting to delete the file..."
-    system "rm -f serverexec";
-]
-script_pipe "bin/mkfifochan" "serverexec 777" []
+open_scriptpipe
 
 load paths "./lib"
 load module geoip
