Added teamsize function.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -1,8 +1,8 @@
 
-title "changemenow"
+title "House of Pain"
 maxclients 8
-password "changemenow"
-motd = "Welcome to the changemenow server"
+password "richtea"
+motd = "Welcome to the House of Pain server"
 
 custom_maprotation_enabled = 1
 custom_maprotation_balance = 0
