Added serverstatus script.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -314,3 +314,9 @@ printsvinfo = [
   Running stats database: @(yesno $record_player_stats)]
     system [echo "@output" >> @filename]
 ]
+
+printsvstatus = [
+    parameters filename
+    local output (format "%1/%2, %3 %4, %5 mins left" $playercount $maxclients $mapname $gamemode $timeleft)
+    system [echo "@output" >> @filename]
+]
