Added teamscore function.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -1,8 +1,8 @@
 
-title "House of Pain"
+title "changemenow"
 maxclients 8
-password "richtea"
-motd = "Welcome to the House of Pain server"
+password "changemenow"
+motd = "Welcome to the changemenow server"
 
 custom_maprotation_enabled = 1
 custom_maprotation_balance = 0
