--- a/conf/maps.conf
+++ b/conf/maps.conf
@@ -1,6 +1,14 @@
+"ffa/default_maps" = [metl4 deathtek fanatic_quake aard3c metl2 ruby curvedm metl3 nmp8 complex douze killfactory lostinspace oasis aqueducts corruption thor hog2 academy tartech kalking1 orbe wake5 ot fragplaza roughinery shadowed DM_BS1 shindou stemple moonlite darkdeath thetowers kmap5 tejen ogrosupply frostbyte fanatic_castle_trap nmp10 island neonpanic orion katrez_d serpentine ksauer1 pgdm oddworld battleofthenile phosgene hades paradigm fanatic_complexities mechanic wdcd guacamole]
 "instagib_maps" = [complex douze fanatic_quake aard3c metl3 academy hog2 wake5]
-"ffa/default_maps" = [deathtek ruby curvedm killfactory lostinspace orbe]
-"ctf_maps" = [duomo face-capture akroseum urban_c paradiselost frostbyte wdcd]
+
+ctfmaps = [hallo reissen berlin_wall shipwreck akroseum face-capture urban_c mach2 duomo tejen paradiselost capture_night frostbyte wdcd]
+"ctf_maps" = $ctfmaps
+"insta ctf_maps" = $ctfmaps
+
+capturemaps = [river_c paradigm fb_capture urban_c serenity nevil_c lostinspace face-capture nmp9 c_valley nmp4 nmp8 fc3 ph-capture monastery corruption hades asteroids venice relic frostbyte ogrosupply hallo reissen akroseum duomo capture_night c_egypt tejen]
+"capture_maps" = $capturemaps
+"regen capture_maps" = $capturemaps
+"insta capture_maps" = $capturemaps
 
 "small_instagib_maps" = [complex douze academy metl3 aard3c]
 "medium_instagib_maps" = [ot orion wake5 space id douze academy shadowed]
