Added auto team balance script.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -264,8 +264,8 @@ if $auto_update [
     track_file_for_update conf/vars.conf
     track_file_for_update conf/maps.conf
 ]
-
 if $record_player_stats [exec scripts/stats/stats.csl]
+if $autoteambalance [exec scripts/teambalance.csl]
 
 defaultgame = [
     //TODO refactoring: extract cleanup code
