--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -25,6 +25,8 @@ mapvoting_enabled = 1
 auto_update = 1
 log_timestamp = 0
 
+autoteambalance = 0
+
 // Stats Configuration
 
 record_player_stats = 0
@@ -51,3 +53,4 @@ irc_serverlogfile = logs/server.log
 
 // Translation Module for sending translated text. Requires REST::Google::Translate
 irc_trmodule = 0
+
