Renamed script file.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -5,7 +5,7 @@
 
 exec "scripts/scriptpipe.csl"
 exec "scripts/irc.csl"
-exec "scripts/common.csl"
+exec "scripts/baselib.csl"
 exec "conf/vars.conf"
 
 logfile "logs/server.log" server_log
