Fixed teamplayers function.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -6,6 +6,7 @@
 exec "scripts/scriptpipe.csl"
 exec "scripts/irc.csl"
 exec "scripts/baselib.csl"
+exec "scripts/commands.csl"
 exec "conf/vars.conf"
 
 logfile "logs/server.log" server_log
