Moved kick event dispatch to kickban function. Added bantime mins parameter to onkick event. New kick log message.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -83,10 +83,11 @@ event_handler $onchmm [
 ]
 
 event_handler $onkick [
-    reference target arg1
-    reference master arg2
-    
-    log (format "%1(%2) was kicked by %3(%4)" (player_name $target) $target (player_name $master) $master)
+    parameters target master mins
+    target_id = (format "%1(%2)" (player_name $target) $target)
+    if (= $master -1) [master_id = "a server admin"] [master_id = (format "%1(%2)" (player_name $master) $master)]
+    if (= $mins -1) [bantime = ""] [bantime = (format "and banned for %1 minutes" $mins)]
+    log (format "%1 was kicked by %2 %3" $target_id $master_id $bantime)
 ]
 
 event_handler $ontext [
