Removed 'space' from maps.

--- a/conf/maps.conf
+++ b/conf/maps.conf
@@ -11,5 +11,5 @@ capturemaps = [river_c paradigm fb_capture urban_c serenity nevil_c lostinspace 
 "insta capture_maps" = $capturemaps
 
 "small_instagib_maps" = [complex douze academy metl3 aard3c]
-"medium_instagib_maps" = [ot orion wake5 space id douze academy shadowed]
+"medium_instagib_maps" = [ot orion wake5 id douze academy shadowed]
 "large_instagib_maps" = [fanatic_quake curvedm lostinspace pgdm ksauer1 wdcd relic urban_c shadowed]
