Added #names command.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -119,7 +119,7 @@ event_handler $ontext [
                 arguments = (erase1st $arguments)
                 try do [@dynamic_command @arguments] [
                     log_status [@dynamic_command function failed with error @arg1]
-                    privmsg $cn (err "Command failed. Check your arguments.")
+                    privmsg $cn (err "Command failed. Check your arguments and your privilege level.")
                 ]
             ] [privmsg $cn (err "Command not found.")]
         ]
