Added alt-name-usage message.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -34,6 +34,12 @@ event_handler $onconnect [
             privmsg $cn $motd
         ]
     ]
+    
+    if (&& (symbol? showaliases) $enable_showaliases) [
+        foreach (privplayers) [
+            privmsg $arg1 (info (format "Alt names used by %1: %2" (player_name $cn) (showaliases $cn)))
+        ]
+    ]
 ]
 
 event_handler $ondisconnect [
