--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -29,8 +29,9 @@ autoteambalance = 0
 
 // Stats Configuration
 
-record_player_stats = 0
+record_player_stats = 1
 upload_player_stats = 0
+enable_showaliases = 1
 
 //IRC Bot Configuration
 
