Changed player connect log message.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -17,8 +17,11 @@ log = [
 
 event_handler $onconnect [
     reference cn arg1
-
-    log (format "%1(%2)(%3) connected" (player_name $cn) $cn (player_ip $cn))
+    
+    local country_log ""
+    if (symbol? country) [country_log = (format "(%1)" (country (player_ip $cn)))]
+    
+    log (format "%1(%2)(%3)%4 connected" (player_name $cn) $cn (player_ip $cn) $country_log)
     
     if (&& (! (strcmp (player_name $cn) "unnamed")) (symbol? country)) [
         local location (country (player_ip $cn))
