Added trending option and persistent ban.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -55,3 +55,6 @@ irc_serverlogfile = logs/server.log
 // Translation Module for sending translated text. Requires REST::Google::Translate
 irc_trmodule = 0
 
+// Trending Module for recording server stats
+// See instructions on http://hopmod.e-topic.info before use.
+trending_enabled = 0 
