--- a/conf/server.conf
+++ b/conf/server.conf
@@ -196,8 +196,9 @@ event_handler $onnewmap [
 ]
 
 event_handler $onsetmaster [
-    reference cn arg1
-    reference set arg2
+    parameters cn set password
+    
+    msg $password
     
     if (strcmp (player_priv $cn) "none") [
         log (format "%1(%2) relinquished privileged status." (player_name $cn) $cn)
