Refactoring: replaced mosts uses of 'reference' with 'parameters'.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -46,8 +46,7 @@ event_handler $onconnect [
 ]
 
 event_handler $ondisconnect [
-    reference cn arg1
-    reference reason arg2
+    parameters cn reason
     
     discmsg = "disconnected"
     if (! (= $reason 0)) [discmsg = (format "disconnected (%1)" (disc_reason $reason))]
@@ -57,32 +56,27 @@ event_handler $ondisconnect [
     if (= $reason $DISC_KICK) [player_var $cn kicked 1]
     
     if (= $playercount 0) [
-        sleep 1 [ //execute after ondisconnect handlers
+        sched [
             if $auto_update server_update
-            sleep 1 defaultgame 
+            sched defaultgame
         ]
     ]
 ]
 
 event_handler $onrename [
-    reference cn arg1
-    reference oldname arg2
-    reference newname arg3
+    parameters cn oldname newname
     
     log (format "%1(%2) renamed to %3" $oldname $cn $newname)
 ]
 
 event_handler $onreteam [
-    reference cn arg1
-    reference oldteam arg2
-    reference newteam arg3
+    parameters cn oldteam newteam
     
     log (format "%1(%2) changed team to %3" (player_name $cn) $cn $newteam)
 ]
 
 event_handler $onchmm [
-    reference cn arg1
-    reference newmode arg2
+    parameters cn newmode
     
     log (format "mastermode is now %1, was set by %2(%3)" $newmode (player_name $cn) $cn)
     
@@ -100,8 +94,7 @@ event_handler $onkick [
 ]
 
 event_handler $ontext [
-    reference cn arg1
-    reference text arg2
+    parameters cn text
     
     log (format "%1(%2): %3" (player_name $cn) $cn $text)
     
@@ -147,9 +140,7 @@ event_handler $onsayteam [
 ]
 
 event_handler $onmapvote [
-    reference cn arg1
-    reference mode arg2
-    reference map arg3
+    parameters cn mode map
     
     local admin (strcmp (player_priv $cn) "admin")
     
@@ -189,8 +180,7 @@ event_handler $onmapchanged [
 ]
 
 event_handler $onnewmap [
-    reference cn arg1
-    reference size arg2
+    parameters cn size
     
     log (format "%1(%2) set new map of size %3" (player_name $cn) $cn $size)
 ]
@@ -215,15 +205,13 @@ event_handler $onauth [
 ]
 
 event_handler $onspectator [
-    reference cn arg1
-    reference spec arg2
+    parameters cn spec
     if $spec [action = "joined"] [action = "left"]
     log (format "%1(%2) %3 spectators" (player_name $cn) $cn $action)
 ]
 
 event_handler $ondeath [
-    reference offender arg1
-    reference victim arg2
+    parameters offender victim
     local suicide (= $offender $victim)
     
     if (&& $teamkill_limit_enabled (&& (! $suicide) (&& (teamgame) (strcmp (player_team $offender) (player_team $victim))))) [
@@ -279,7 +267,6 @@ if $autoteambalance [exec scripts/teambalance.csl]
 
 defaultgame = [
     //TODO refactoring: extract cleanup code
-    
     mastermode $MM_OPEN
     changemap $default_mode $default_map
     gametime $default_gametime
@@ -291,7 +278,6 @@ if $irc_enabled [
     daemon bin/irc.pl [] logs/irc.log logs/irc.log
 ]
 
-//Variables that are too obscure or technical to be located in vars.conf
 flood_protection SV_TEXT 1000
 flood_protection SV_SETMASTER 10000
 flood_protection SV_KICK 30000
@@ -302,7 +288,7 @@ allow_talk = 1
 disallow_talk_reason = ""
 
 log_status "*** Running Hopmod 3.0 (dev) for Sauerbraten CTF Edition ***"
-log [server started @(datetime (now))]
+log [Server started @(datetime (now))]
 
 open_scriptpipe
 
