Refactoring: moved teamkill detection/punishment code to teamkills.csl

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -3,9 +3,10 @@
 // * It's safe to modify this file while the server is running, it will not be
 //   overwritten on server shutdown.
 
+exec "scripts/baselib.csl"
 exec "scripts/scriptpipe.csl"
 exec "scripts/irc.csl"
-exec "scripts/baselib.csl"
+exec "scripts/teamkills.csl"
 exec "scripts/commands.csl"
 exec "conf/vars.conf"
 
@@ -212,33 +213,8 @@ event_handler $onspectator [
 
 event_handler $ondeath [
     parameters offender victim
-    local suicide (= $offender $victim)
     
-    if (&& $teamkill_limit_enabled (&& (! $suicide) (&& (teamgame) (strcmp (player_team $offender) (player_team $victim))))) [
-        local count (player_var $offender teamkills (+ 1 (player_var $offender teamkills)))
-        local times (player_var $offender teamkill_times (concat $uptime (player_var $offender teamkill_times)))
-        
-        if (!= (player_var $offender teamkill_warned) 1) [
-            privconsole $offender script [Teamkill restrictions per game: maxcount=@teamkill_limit maxrate=@teamkill_maxrate per min.]
-            player_var $offender teamkill_warned 1
-        ]
-        
-        if (> $count 1) [
-            msg (gameplay (format "%1 has fragged team mates %2 times." (print_name $offender) $count (player_gun $offender)))
-        ]
-
-        if (> (player_var $offender teamkills) $teamkill_limit) [
-            kick $offender 30
-            console script [@(player_name $offender) was kicked for exceeding teamkill limit.]
-            log (format "%1 was kicked for team killing." (player_name $offender))
-        ] [
-            if (&& (> (listlen $times) $teamkill_maxrate) [< (add_intervals $times $teamkill_maxrate) 60000]) [
-                kick $offender 30
-                console script [@(player_name $offender) was kicked for exceeding maximum teamkill rate.]
-                log (format "%1 was kicked for team killing." (player_name $offender))
-            ]
-        ]
-    ]
+    teamkill_update $offender $victim
 ]
 
 event_handler $onshutdown [
